handling 800k docs